checking dom before manipulation

--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Really Simple Meditation</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <script type="module" src="./app.ts" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Really Simple Meditation</h1>
+      <h1>Really Simple Meditation</h1>
 
-        <!-- Loading Section (shown during OAuth callback) -->
-        <div id="loadingSection" class="loading-section">
-            <div class="spinner"></div>
-            <p>Completing sign in...</p>
+      <!-- Loading Section (shown during OAuth callback) -->
+      <div id="loadingSection" class="loading-section">
+        <div class="spinner"></div>
+        <p>Completing sign in...</p>
+      </div>
+
+      <!-- Login Section -->
+      <div id="loginSection" class="login-section active">
+        <p>Sign in with your AT Protocol account (Bluesky, etc.)</p>
+        <form id="loginForm">
+          <input
+            type="text"
+            id="handleInput"
+            placeholder="your-handle.bsky.social"
+            autocomplete="username"
+            required
+          />
+          <button type="submit">Sign In</button>
+        </form>
+        <div id="loginStatus" class="status" style="display: none"></div>
+      </div>
+
+      <!-- App Section (shown after login) -->
+      <div id="appSection" class="app-section">
+        <div class="user-info">
+          <strong>Logged in as:</strong>
+          <div id="userHandle"></div>
+          <div
+            id="userDid"
+            style="font-size: 12px; color: #666; margin-top: 5px"
+          ></div>
         </div>
 
-        <!-- Login Section -->
-        <div id="loginSection" class="login-section active">
-            <p>Sign in with your AT Protocol account (Bluesky, etc.)</p>
-            <form id="loginForm">
-                <input
-                    type="text"
-                    id="handleInput"
-                    placeholder="your-handle.bsky.social"
-                    autocomplete="username"
-                    required
-                />
-                <button type="submit">Sign In</button>
-            </form>
-            <div id="loginStatus" class="status" style="display: none;"></div>
-        </div>
+        <div id="appStatus" class="status">Ready to meditate!</div>
 
-        <!-- App Section (shown after login) -->
-        <div id="appSection" class="app-section">
-            <div class="user-info">
-                <strong>Logged in as:</strong>
-                <div id="userHandle"></div>
-                <div id="userDid" style="font-size: 12px; color: #666; margin-top: 5px;"></div>
-            </div>
-
-            <div id="appStatus" class="status">
-                Ready to meditate!
-            </div>
-
-            <button id="logoutButton" class="secondary">Sign Out</button>
-        </div>
+        <button id="logoutButton" class="secondary">Sign Out</button>
+      </div>
     </div>
-
-    <script type="module" src="./app.ts"></script>
-</body>
+  </body>
 </html>
