adding buttons and basic views for meditations and presets lists

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div id="appSection" class="app-section">
         <div class="user-info">
           <strong>Logged in as:</strong>
+          <div id="userDisplayName"></div>
           <div id="userHandle"></div>
           <div
             id="userDid"
@@ -45,6 +46,20 @@
         </div>
 
         <div id="appStatus" class="status">Ready to meditate!</div>
+
+        <!-- Main Menu View -->
+        <div id="mainMenuView" class="view-section active">
+          <div id="menuContainer"></div>
+        </div>
+
+        <!-- New Meditation View -->
+        <div id="newMeditationView" class="view-section"></div>
+
+        <!-- Presets View -->
+        <div id="presetsView" class="view-section"></div>
+
+        <!-- Past Sessions View -->
+        <div id="sessionsView" class="view-section"></div>
 
         <button id="logoutButton" class="secondary">Sign Out</button>
       </div>
