add meditating view with timer

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
           <div id="menuContainer"></div>
         </div>
 
-        <!-- New Meditation View -->
-        <div id="newMeditationView" class="view-section"></div>
+        <!-- New Meditation Form View -->
+        <div id="newMeditationFormView" class="view-section"></div>
+
+        <!-- Meditating View -->
+        <div id="meditatingView" class="view-section"></div>
 
         <!-- Presets View -->
         <div id="presetsView" class="view-section"></div>
